# API

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: acceptance-samples.md  roadmap.md
scripts/: open_doubao_cdp.ps1  start_server.ps1  verify_doubao_call.js
src/web_adapter/: __init__.py  browser.py  config.py  diagnostics.py  errors.py  logging_utils.py  main.py  models.py  openai_compat.py  service.py
src/web_adapter/providers/: __init__.py  base.py  doubao.py
tests/: test_config.py  test_doubao_markdown.py  test_openai_compat.py  test_service.py
